Image Block - bug fix overlay center align not working inside editor mode issue

--- a/src/blocks/image/style.scss
+++ b/src/blocks/image/style.scss
@@ -15,7 +15,6 @@ html :where(.editor-styles-wrapper) .block-editor-block-list__block > .wp-block[
 }
 
 .wp-block-uagb-image {
-	margin: 0;
 	&--align-none {
 		margin-left: auto;
 		margin-right: auto;
@@ -35,7 +34,10 @@ html :where(.editor-styles-wrapper) .block-editor-block-list__block > .wp-block[
 		margin-bottom: 1em;
 	}
 	&--align-full {
-		max-width: none !important;
+		margin-left: calc(50% - 50vw);
+		margin-right: calc(50% - 50vw);
+		max-width: 100vw;
+		width: 100vw;
 		img {
 			height: auto;
 			width: 100%;
@@ -63,6 +65,9 @@ html :where(.editor-styles-wrapper) .block-editor-block-list__block > .wp-block[
 	&--layout-overlay {
 		display: inline-block;
 		position: relative;
+		&.wp-block-uagb-image--align-center {
+			display: block;
+		}
 		img {
 			width: 100%;
 			height: auto;
